kubeflow/common/iap-ingress/build/apps_v1_deployment_cloud-endpoints-enabler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    kustomize.component: iap-ingress
  name: cloud-endpoints-enabler
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      kustomize.component: iap-ingress
  template:
    metadata:
      labels:
        kustomize.component: iap-ingress
        service: cloud-endpoints-enabler
    spec:
      containers:
      - command:
        - bash
        - /var/envoy-config/setup_cloudendpoints.sh
        image: gcr.io/kubeflow-images-public/ingress-setup:latest
        name: cloud-endpoints-enabler
        volumeMounts:
        - mountPath: /var/envoy-config/
          name: config-volume
      restartPolicy: Always
      serviceAccountName: kf-admin
      volumes:
      - configMap:
          name: envoy-config
        name: config-volume
