kubeflow/common/iap-ingress/build/networking.k8s.io_v1_ingress_envoy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: kubeflow-ip
    networking.gke.io/managed-certificates: gke-certificate
  labels:
    kustomize.component: iap-ingress
  name: envoy-ingress
  namespace: istio-system
spec:
  defaultBackend:
    service:
      name: istio-ingressgateway
      port:
        number: 80
  rules:
  - host: kubeflow.endpoints.columbia-ms-courses-home.cloud.goog
    http:
      paths:
      - backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
